<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_about">About</string>
    <string name="action_exit">Close app</string>
    <string name="come_back">See you son!</string>
    <!-- About activity -->
    <string name="developed_by">This app has been developed by Carles Pérez Revert</string>
    <string name="upv">Universitat Politècnica de València (UPV)</string>
    <!-- New list activity -->
    <string name="new_list">New list</string>
    <string name="list_name">Enter a name for your list</string>
    <string name="label_shopping_list">Shopping list:</string>
    <string name="input_shopping_list">Enter your shopping list here</string>
    <string name="save">Save</string>
    <!-- Dialog -->
    <string name="dialog_title">Dialog title</string>
    <string name="dialog_message">Dialog message</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
</resources>
